# dfa-simulator

./: Cargo.toml  README.md  dfa.txt  input.txt  lambda_dfa.txt  lambda_nfa.txt  nfa.txt
src/: dfa.rs  lambda_dfa.rs  lambda_nfa.rs  lib.rs  main.rs  nfa.rs  raw_automaton.rs
tests/: integration_tests.rs
