[package]
name = "automaton-simulator"
description = "Library with DFA, NFA, L-DFA, L-NFA."
version = "0.1.2"
edition = "2024"
authors = ["Lefterache Ștefan <lefterache.stefan.8@gmail.com>"]
license = "GPL-3.0-or-later"
categories = ["algorithms", "mathematics", "simulation"]
keywords = ["dfa", "automaton"]
rust-version = "1.85"

[dependencies]
itertools = "0.14.0"
petgraph = "0.8.3"
thiserror = "2.0.18"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
